--- a/angular-webapp-pwa/package.json
+++ b/angular-webapp-pwa/package.json
@@ -21,6 +21,10 @@
     "@angular/pwa": "^0.803.14",
     "@angular/router": "~8.2.11",
     "@angular/service-worker": "~8.2.11",
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.51",
+    "angularx-social-login": "^2.2.1",
+    "gapi": "0.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
